# cnn-tutorial

./: README.md  pyproject.toml  requirements.txt
data/: decoded.mf4
data_prep/: create_hf_dmu_dataset.ipynb  tf_keras_3d.ipynb
layouts/: compare_layout.json  debug_layout.json
notebooks/: 3d_debug_layout.json  CAN_data_analysis.ipynb  audio_classification.ipynb  colab_test.ipynb  hf_cifar100.ipynb  tf_keras_2d.ipynb  tf_keras_3d.ipynb  tf_keras_3d_autoencoder.ipynb  tutorial_layouts.py
